[package]
name = "py-crossbeam-channel"
version = "0.1.0"
authors = ["Noé Rubinstein <noe.rubinstein@gmail.com>"]
edition = "2018"
description = "Python bindings to crossbeam-channel, providing the same API as the standard library's `queue.SimpleQueue`, but with support for backpressure"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "py_crossbeam_channel"
crate-type = ["cdylib"]

[dependencies]
crossbeam = "0.8.0"

[dependencies.pyo3]
version = "0.12.3"
features = ["extension-module"]

[target.x86_64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]
